# arm-app-esp32

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/mruby_component/: CMakeLists.txt  esp32_build_config.rb
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/storage/: main.rb
